--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -183,7 +183,7 @@ body {
   position: relative;
   color: #353535;
   background-color: transparent !important;
-  min-height: 100vh;
+  margin-bottom: 1000px;
   width: 1032px;
   margin: auto;
 }
@@ -229,8 +229,9 @@ body {
 
 .container-scroll {
   text-align: center;
-  margin-top: -10%;
+  margin-top: 40%;
   margin-bottom: 10%;
+  background: transparent;
 }
 
 .scroll-down {
@@ -464,7 +465,7 @@ p {
 
 .container-concept {
   margin-left: 20%;
-  margin-top: 50px;
+  margin-top: 150px;
   position: relative;
   height: 500px;
   color: #353535;
@@ -765,6 +766,7 @@ a {
 }
 
 .header {
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
