--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3,7 +3,6 @@
   margin: 0%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #FFFAF4;
 }
 
 html {
@@ -1555,6 +1554,85 @@ li {
   margin-top: 10px;
   margin-left: 40px;
   text-align: justify;
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+.events {
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(500px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 100px;
+  margin: 0px auto;
+  width: 80%;
+}
+
+.event1, .event2, .event3, .event4, .event5, .event6 {
+  background-color: #D65D38;
+  height: 500px;
+  width: 100%;
+  margin-top: 92px;
+  position: relative;
+  padding: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.event-title {
+  margin-left: 326px;
+  background: transparent;
+  font-family: "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.event-desc {
+  text-align: justify;
+  background: transparent;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 26px;
+  color: white;
+  font-weight: normal;
+  width: 100%;
+  margin-right: 30px;
+}
+
+.event-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.event-date {
+  background-color: #353535;
+  font-size: 26px;
+  padding: 35px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
   font-family: "Helvetica Neue", sans-serif;
 }
 /*# sourceMappingURL=styles.css.map */
