--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -605,8 +605,7 @@ p {
   display: -ms-grid;
   display: grid;
   gap: 150px 0px;
-      grid-template-areas: "grid-logo grid-news"
- "grid-nav grid-medias";
+      grid-template-areas: "grid-logo grid-news" "grid-nav grid-medias";
 }
 
 .grid-logo {
@@ -1883,5 +1882,171 @@ li {
   text-align: center;
   font-weight: bold;
   font-family: "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-family: "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 80px;
+}
+
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-size: 20px;
+  color: black;
+}
+
+.button p {
+  font-style: normal;
+  font-weight: 200;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+article {
+  margin-top: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.nosvid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.nosvid .letexte {
+  margin-left: 223px;
+}
+
+.nosvid .letexte h1 {
+  margin-left: 10px;
+  margin-bottom: 2%;
+}
+
+.nosvid .letexte p {
+  font-family: "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-size: 25px;
+}
+
+.nosvid .letexte .diago {
+  width: 70px;
+  height: 70px;
+  margin-left: 10px;
+  margin-top: -13px;
+}
+
+.nosvid .chat {
+  margin-top: 100px;
+  margin-right: 94px;
+}
+
+.vid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.vid h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 30px;
+  margin-right: 795px;
+}
+
+.vid iframe {
+  margin-top: 51px;
+  margin-bottom: 51px;
+  width: 995px;
+  height: 556px;
+  background-color: grey;
+}
+
+.vid h3 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 25px;
+  margin-right: 865px;
+}
+
+.lesvids .recherchebientot {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 100px;
+  background-color: grey;
+  text-align: center;
+  font-size: 100px;
+}
+
+.lesvids .gridvid {
+  width: 100%;
+  margin-left: 223px;
+  margin-right: 223px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(312px, 195px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(312px, 195px));
+  gap: 50px;
+}
+
+.lesvids .gridvid div {
+  width: 100%;
+  height: 195px;
+  background-color: grey;
+}
+
+.lesvids .gridvid h3 {
+  margin-top: 210px;
+}
+
+.lesvids .voir {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-left: 223px;
+  margin-top: 120px;
+}
+
+.lesvids .voir img {
+  margin-top: -22px;
+  margin-left: 15px;
 }
 /*# sourceMappingURL=styles.css.map */
